# TP2_Scientific_Computing_Pipline

./: .gitignore  README.md  Snakefile  pyproject.toml  questions_de_reflexion.md
.github/workflows/: ci_cd_pipeline.yml
outputs/figures/: pinn_surface.html
src/: analyse_stabilite.py  deep_pinn.py  hpc_acceleration.py  numerical_core.py  symbolic_derivations.py  visualization.py
tests/: conftest.py  test_hpc.py  test_numerical.py  test_pinn.py  test_stability.py  test_symbolic.py  test_visualization.py
