[project]
name = "scientific-pipeline"
version = "0.1.0"
description = "Scientific computing pipeline"
requires-python = "==3.11.*"

dependencies = [
    "numpy>=2.2",
    "pandas>=2.3,<2.4",
    "scipy",
    "sympy",
    "polars",
    "matplotlib",
    "seaborn",
    "plotly",
    "numba",
    "torch",
    "snakemake",
    "joblib",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=src"

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["untyped-decorator","no-untyped-call"]

[[tool.mypy.overrides]]
module = [
    "sympy.*",
    "numba.*",
    "joblib.*",
    "plotly.*",
    "seaborn.*",
]

